@@ -106,6 +106,8 @@ export MAGPIE_LOCAL_JOB_DIR=${MAGPIE_LOCAL_DIR}/${SLURM_JOB_NAME}/${SLURM_JOB_ID
 export HADOOP_LOCAL_JOB_DIR=${HADOOP_LOCAL_DIR}/${SLURM_JOB_NAME}/${SLURM_JOB_ID}
 export HADOOP_CONF_DIR=${HADOOP_LOCAL_JOB_DIR}/conf
 export HADOOP_LOG_DIR=${HADOOP_LOCAL_JOB_DIR}/log
+# For jobhistoryserver
+export HADOOP_MAPRED_HOME=${HADOOP_HOME}
 
 export PIG_LOCAL_JOB_DIR=${PIG_LOCAL_DIR}/${SLURM_JOB_NAME}/${SLURM_JOB_ID}
 export PIG_CONF_DIR=${PIG_LOCAL_JOB_DIR}/conf
