@@ -251,6 +251,21 @@ then
     else
 	hadoopsetuppass=1
     fi
+
+    # Setup job history server after namenode comes up, it may need to
+    # write/create in HDFS
+    if [ "${hadoopsetuppass}" == "1" ]
+    then
+	if [ "${HADOOP_SETUP_TYPE}" == "MR1" ]
+	then
+	    ${hadoopscriptprefix}/start-jobhistoryserver.sh
+	fi
+	
+	if [ "${HADOOP_SETUP_TYPE}" == "MR2" ]
+	then
+	    ${hadoopscriptprefix}/mr-jobhistory-daemon.sh start historyserver
+	fi
+    fi
 fi
 
 if [ "${MAGPIE_JOB_TYPE}" == "script" ]
@@ -319,11 +334,13 @@ then
 	if [ "${HADOOP_SETUP_TYPE}" == "MR1" ]
 	then
 	    ${hadoopscriptprefix}/stop-mapred.sh
+	    ${hadoopscriptprefix}/stop-jobhistoryserver.sh
 	fi
 	
 	if [ "${HADOOP_SETUP_TYPE}" == "MR2" ]
 	then
 	    ${hadoopscriptprefix}/stop-yarn.sh
+	    ${hadoopscriptprefix}/mr-jobhistory-daemon.sh stop historyserver
 	fi
 
 	if [ "$HADOOP_FILESYSTEM_MODE" == "hdfs" ] \
