@@ -1,6 +1,7 @@
 magpie 1.19
 -----------
 Support changed configuration settings in yarn-site.xml for Hadoop 2.2.0.
+Launch and run job history server when Hadoop setup is enabled.
 Various code cleanup.
 
 magpie 1.18
